--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,900&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +12,36 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+.formulaire {
+  position: relative;
+  top: 7em;
+  left: 45em;
+  border: 3px solid #0000ff;
+  height: 70px;
+  width: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.photo{
+  height: 600px;
+  width: 1511px;
+}
+.flexContainer{
+  position: relative;
+  left: 22em;
+  margin-top: 2em;
+  border: 2px solid #0000ff;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2.5em;
+  width: 50%;
+}
+section h1{
+  font-family: 'Montserrat', Courier, monospace;
+  font-size: 42px;
+  font-weight:bolder;
 }
